Theres a scene that it bugs the scroll so i remove the overflow hidden

--- a/src/index.css
+++ b/src/index.css
@@ -17,10 +17,6 @@
   }
 }
 
-body.modal-open {
-  overflow: hidden;
-}
-
 .glass {
   background: linear-gradient(
     135deg,
